--- a/fed/fed.html
+++ b/fed/fed.html
@@ -4,23 +4,23 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>US Economic Indicators Dashboard • FRED-based Live Monitor</title>
+<title>DataMadang Economic Indicators Dashboard • FRED-based Live Monitor</title>
 <!-- SEO Meta Tags -->
-<meta content="Interactive dashboard of US economic indicators (CPI, PCE, Treasury yields, labor market, housing, money, credit, stress, volatility, GDP). Powered by FRED series IDs for reproducible analysis." name="description"/>
+<meta content="DataMadang: Interactive dashboard of US economic indicators (CPI, PCE, Treasury yields, labor market, housing, money, credit, stress, volatility, GDP). Powered by FRED series IDs for reproducible analysis." name="description"/>
 <meta content="US economic indicators 2025, FRED data dashboard, real-time economic data, GDP tracker, CPI inflation rate, unemployment rate today, Treasury bond yields, federal funds rate, mortgage rates, housing market data, economic charts free, federal reserve dashboard, live economic indicators, Treasury yield curve, economic analysis tools, recession indicators, inflation tracker, job market data, real estate market trends, economic forecasting" name="keywords"/>
-<meta content="Economic Dashboard" name="author"/>
+<meta content="DataMadang" name="author"/>
 <meta content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" name="robots"/>
 <meta content="en" name="language"/>
 <!-- Open Graph Meta Tags (for social media sharing) -->
-<meta content="US Economic Indicators Dashboard • FRED-based Live Monitor" property="og:title"/>
-<meta content="Interactive dashboard of US economic indicators (CPI, PCE, Treasury yields, labor market, housing, money, credit, stress, volatility, GDP). Powered by FRED series IDs for reproducible analysis." property="og:description"/>
+<meta content="DataMadang Economic Indicators Dashboard • FRED-based Live Monitor" property="og:title"/>
+<meta content="DataMadang: Interactive dashboard of US economic indicators (CPI, PCE, Treasury yields, labor market, housing, money, credit, stress, volatility, GDP). Powered by FRED series IDs for reproducible analysis." property="og:description"/>
 <meta content="website" property="og:type"/>
 <meta content="en_US" property="og:locale"/>
-<meta content="US Economic Indicators Dashboard" property="og:site_name"/>
+<meta content="DataMadang Economic Indicators Dashboard" property="og:site_name"/>
 <!-- Twitter Card Meta Tags -->
 <meta content="summary_large_image" name="twitter:card"/>
-<meta content="US Economic Indicators Dashboard • FRED-based Live Monitor" name="twitter:title"/>
-<meta content="Interactive dashboard of US economic indicators (CPI, PCE, Treasury yields, labor market, housing, money, credit, stress, volatility, GDP). Powered by FRED series IDs for reproducible analysis." name="twitter:description"/>
+<meta content="DataMadang Economic Indicators Dashboard • FRED-based Live Monitor" name="twitter:title"/>
+<meta content="DataMadang: Interactive dashboard of US economic indicators (CPI, PCE, Treasury yields, labor market, housing, money, credit, stress, volatility, GDP). Powered by FRED series IDs for reproducible analysis." name="twitter:description"/>
 <!-- Search Engine Optimization -->
 <meta content="#2c3e50" name="theme-color"/>
 <link href="https://yourdomain.com/economy" rel="canonical"/>
@@ -572,7 +572,7 @@
 <meta content="https://yourdomain.example/economic-indicators-dashboard" property="og:url"/><script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "WebPage",
-  "name": "US Economic Indicators Dashboard • FRED-based Live Monitor",
+  "name": "DataMadang Economic Indicators Dashboard • FRED-based Live Monitor",
   "inLanguage": "en",
   "description": "Interactive dashboard of US economic indicators (CPI, PCE, Treasury yields, labor market, housing, money, credit, stress, volatility, GDP). Powered by FRED series IDs for reproducible analysis.",
   "url": "https://yourdomain.example/economic-indicators-dashboard"
@@ -1236,7 +1236,7 @@
 <body>
 <div class="container">
 <header>
-<h1>📊 Real-Time US Economic Indicators Dashboard 2025</h1>
+<h1>📊 DataMadang Real-Time Economic Indicators Dashboard 2025</h1>
 </header>
 <div class="subtitle">
 <strong>FREE</strong> Federal Reserve (FRED) Official Economic Data | Real-time monitoring of 38+ indicators including GDP, CPI, Treasury Yields, Interest Rates &amp; Employment | Updated Daily
@@ -1269,7 +1269,7 @@
 <div class="status-info" id="statusInfo">
             📊 <span class="loading">Loading...</span>
 </div>
-<div class="indicators-grid"><nav aria-label="Category index" id="category-index"><h1>US Economic Indicators Dashboard</h1><p>Browse indicators by category. Use the toolbar to sort, collapse, and rebalance columns.</p><ul><li><a href="#cat-inflation-price-indicatorslive">📈 Inflation &amp; Price IndicatorsLIVE (3)</a></li><li><a href="#cat-employment-labor-marketlive">💼 Employment &amp; Labor MarketLIVE (4)</a></li><li><a href="#cat-treasury-bonds-interest-rateslive">💰 Treasury Bonds &amp; Interest RatesLIVE (13)</a></li><li><a href="#cat-financial-conditionslive">🏦 Financial ConditionsLIVE (7)</a></li><li><a href="#cat-credit-lendinglive">🏛️ Credit &amp; LendingLIVE (1)</a></li><li><a href="#cat-consumer-sentiment-perceptionslive">🧠 Consumer Sentiment &amp; PerceptionsLIVE (1)</a></li><li><a href="#cat-household-consumption-incomelive">🏠 Household Consumption &amp; IncomeLIVE (4)</a></li><li><a href="#cat-food-engel-s-law-proxieslive">🍎 Food &amp; Engel's Law ProxiesLIVE (1)</a></li><li><a href="#cat-credit-stress-household-debtlive">🚨 Credit Stress &amp; Household DebtLIVE (2)</a></li><li><a href="#cat-leading-economic-indicatorslive">📈 Leading Economic IndicatorsLIVE (1)</a></li><li><a href="#cat-construction-investmentlive">🏧 Construction &amp; InvestmentLIVE (1)</a></li><li><a href="#cat-business-dynamicslive">🏢 Business DynamicsLIVE (2)</a></li><li><a href="#cat-consumer-restaurant-proxieslive">🍔 Consumer &amp; Restaurant ProxiesLIVE (1)</a></li><li><a href="#cat-gdp-growthlive">📊 GDP &amp; GrowthLIVE (3)</a></li><li><a href="#cat-housing-real-estatelive">🏠 Housing &amp; Real EstateLIVE (5)</a></li><li><a href="#cat-money-creditlive">💳 Money &amp; CreditLIVE (1)</a></li><li><a href="#cat-commoditieslive">🥇 CommoditiesLIVE (2)</a></li><li><a href="#cat-market-volatility-risklive">⚡ Market Volatility &amp; RiskLIVE (1)</a></li><li><a href="#cat-firm-size-market-segmentslive">🏢 Firm Size &amp; Market SegmentsLIVE (5)</a></li><li><a href="#cat-healthcare-costs-medical-cpilive">🏥 Healthcare Costs &amp; Medical CPILIVE (6)</a></li><li><a href="#cat-demographicslive">👥 DemographicsLIVE (1)</a></li></ul></nav>
+<div class="indicators-grid"><nav aria-label="Category index" id="category-index"><h1>DataMadang Economic Indicators Dashboard</h1><p>Browse indicators by category. Use the toolbar to sort, collapse, and rebalance columns.</p><ul><li><a href="#cat-inflation-price-indicatorslive">📈 Inflation &amp; Price IndicatorsLIVE (3)</a></li><li><a href="#cat-employment-labor-marketlive">💼 Employment &amp; Labor MarketLIVE (4)</a></li><li><a href="#cat-treasury-bonds-interest-rateslive">💰 Treasury Bonds &amp; Interest RatesLIVE (13)</a></li><li><a href="#cat-financial-conditionslive">🏦 Financial ConditionsLIVE (7)</a></li><li><a href="#cat-credit-lendinglive">🏛️ Credit &amp; LendingLIVE (1)</a></li><li><a href="#cat-consumer-sentiment-perceptionslive">🧠 Consumer Sentiment &amp; PerceptionsLIVE (1)</a></li><li><a href="#cat-household-consumption-incomelive">🏠 Household Consumption &amp; IncomeLIVE (4)</a></li><li><a href="#cat-food-engel-s-law-proxieslive">🍎 Food &amp; Engel's Law ProxiesLIVE (1)</a></li><li><a href="#cat-credit-stress-household-debtlive">🚨 Credit Stress &amp; Household DebtLIVE (2)</a></li><li><a href="#cat-leading-economic-indicatorslive">📈 Leading Economic IndicatorsLIVE (1)</a></li><li><a href="#cat-construction-investmentlive">🏧 Construction &amp; InvestmentLIVE (1)</a></li><li><a href="#cat-business-dynamicslive">🏢 Business DynamicsLIVE (2)</a></li><li><a href="#cat-consumer-restaurant-proxieslive">🍔 Consumer &amp; Restaurant ProxiesLIVE (1)</a></li><li><a href="#cat-gdp-growthlive">📊 GDP &amp; GrowthLIVE (3)</a></li><li><a href="#cat-housing-real-estatelive">🏠 Housing &amp; Real EstateLIVE (5)</a></li><li><a href="#cat-money-creditlive">💳 Money &amp; CreditLIVE (1)</a></li><li><a href="#cat-commoditieslive">🥇 CommoditiesLIVE (2)</a></li><li><a href="#cat-market-volatility-risklive">⚡ Market Volatility &amp; RiskLIVE (1)</a></li><li><a href="#cat-firm-size-market-segmentslive">🏢 Firm Size &amp; Market SegmentsLIVE (5)</a></li><li><a href="#cat-healthcare-costs-medical-cpilive">🏥 Healthcare Costs &amp; Medical CPILIVE (6)</a></li><li><a href="#cat-demographicslive">👥 DemographicsLIVE (1)</a></li></ul></nav>
 <!-- Inflation & Price Indicators -->
 <div class="category" id="cat-inflation-price-indicatorslive">
 <h2>📈 Inflation &amp; Price Indicators <span class="fred-logo">LIVE</span></h2>
@@ -3547,7 +3547,7 @@
             console.log('📊 Economic Dashboard 2025 loading started');
             
             // Add structured data for better SEO
-            document.title = document.title || 'Real-Time US Economic Dashboard 2025 | Free FRED Data';
+            document.title = document.title || 'DataMadang Real-Time Economic Dashboard 2025 | Free FRED Data';
             
             updateClock();
             cleanExpiredCache(); // Clean expired cache
