--- a/fed/fed.html
+++ b/fed/fed.html
@@ -2657,9 +2657,9 @@
 
         // CSV file URLs
         const CSV_URLS = {
-            data: 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/refs/heads/main/fed/data_fed.csv',
-            catalog: 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/refs/heads/main/fed/resolved_catalog.csv',
-            manifest: 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/refs/heads/main/fed/run_manifest.csv'
+            data: 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/main/fed/data_fed.csv',
+            catalog: 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/main/fed/resolved_catalog.csv',
+            manifest: 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/main/fed/run_manifest.csv'
         };
 
         // Parse CSV text into array of objects with proper CSV handling
