--- a/rank.html
+++ b/rank.html
@@ -564,9 +564,18 @@ function updateWorldPopulation() {
     // Update country-specific ranking if available
     const countryRankElement = document.getElementById('countryRank');
     if (countryRankElement && window.__lastResult.country && ALL_COUNTRIES[window.__lastResult.country]) {
-      const countryPopulation = ALL_COUNTRIES[window.__lastResult.country].population * 1000000;
+      const countryPopulation = getCurrentCountryPopulation(window.__lastResult.country);
       const countryRank = Math.round(countryPopulation * (1 - window.__lastResult.composite_percentile));
       countryRankElement.textContent = `#${fmtInt(countryRank)}`;
+    }
+
+    // Update country population display if available
+    const countryPopulationElement = document.getElementById('countryPopulation');
+    if (countryPopulationElement && window.__lastResult.country && POPULATION_PROJECTIONS[window.__lastResult.country]) {
+      const countryPopulation = getCurrentCountryPopulation(window.__lastResult.country);
+      const currentPop = (countryPopulation / 1000000).toFixed(1);
+      const projectedPop2030 = POPULATION_PROJECTIONS[window.__lastResult.country].pop_2030;
+      countryPopulationElement.textContent = `${currentPop}M (${projectedPop2030}M by 2030)`;
     }
   }
 }
@@ -689,13 +698,132 @@ const ADDITIONAL_COUNTRIES = {
   "Zimbabwe": {rank: 155, gdp: 28.4, gdp_per_capita: 1899, population: 15.0}
 };
 
+// =======================
+// Population Projection Data (from GitHub CSV)
+// =======================
+const POPULATION_PROJECTIONS = {
+  "China": {pop_2025: 1416.1, pop_2030: 1400.6},
+  "India": {pop_2025: 1463.9, pop_2030: 1520.3},
+  "United States": {pop_2025: 341.4, pop_2030: 348.1},
+  "Indonesia": {pop_2025: 283.0, pop_2030: 290.9},
+  "Pakistan": {pop_2025: 251.3, pop_2030: 273.8},
+  "Nigeria": {pop_2025: 232.7, pop_2030: 269.1},
+  "Brazil": {pop_2025: 220.8, pop_2030: 228.4},
+  "Bangladesh": {pop_2025: 174.7, pop_2030: 180.9},
+  "Russia": {pop_2025: 144.2, pop_2030: 142.1},
+  "Mexico": {pop_2025: 133.5, pop_2030: 137.9},
+  "Ethiopia": {pop_2025: 132.1, pop_2030: 150.2},
+  "Japan": {pop_2025: 123.3, pop_2030: 120.8},
+  "Philippines": {pop_2025: 118.6, pop_2030: 125.2},
+  "Egypt": {pop_2025: 114.0, pop_2030: 123.0},
+  "DR Congo": {pop_2025: 105.0, pop_2030: 119.5},
+  "Vietnam": {pop_2025: 98.8, pop_2030: 100.3},
+  "Turkey": {pop_2025: 86.3, pop_2030: 89.1},
+  "Iran": {pop_2025: 86.8, pop_2030: 89.8},
+  "Germany": {pop_2025: 83.4, pop_2030: 82.6},
+  "Thailand": {pop_2025: 71.6, pop_2030: 72.2},
+  "United Kingdom": {pop_2025: 68.3, pop_2030: 69.4},
+  "France": {pop_2025: 68.5, pop_2030: 69.7},
+  "Tanzania": {pop_2025: 68.1, pop_2030: 78.8},
+  "South Africa": {pop_2025: 61.0, pop_2030: 63.8},
+  "Italy": {pop_2025: 58.9, pop_2030: 57.9},
+  "Kenya": {pop_2025: 57.1, pop_2030: 66.0},
+  "Myanmar": {pop_2025: 55.2, pop_2030: 56.8},
+  "South Korea": {pop_2025: 51.2, pop_2030: 50.4},
+  "Colombia": {pop_2025: 52.9, pop_2030: 55.2},
+  "Spain": {pop_2025: 47.8, pop_2030: 47.7},
+  "Argentina": {pop_2025: 46.7, pop_2030: 48.4},
+  "Algeria": {pop_2025: 46.8, pop_2030: 50.4},
+  "Iraq": {pop_2025: 45.5, pop_2030: 52.2},
+  "Afghanistan": {pop_2025: 43.3, pop_2030: 51.4},
+  "Saudi Arabia": {pop_2025: 37.5, pop_2030: 40.1},
+  "Uzbekistan": {pop_2025: 36.8, pop_2030: 39.5},
+  "Ukraine": {pop_2025: 36.7, pop_2030: 34.9},
+  "Morocco": {pop_2025: 38.8, pop_2030: 40.8},
+  "Poland": {pop_2025: 37.3, pop_2030: 36.8},
+  "Canada": {pop_2025: 40.1, pop_2030: 42.0},
+  "Malaysia": {pop_2025: 34.4, pop_2030: 36.0},
+  "Angola": {pop_2025: 37.9, pop_2030: 44.0},
+  "Ghana": {pop_2025: 34.4, pop_2030: 38.8},
+  "Mozambique": {pop_2025: 34.3, pop_2030: 39.6},
+  "Yemen": {pop_2025: 35.0, pop_2030: 40.6},
+  "Nepal": {pop_2025: 31.0, pop_2030: 32.6},
+  "Australia": {pop_2025: 26.8, pop_2030: 28.2},
+  "North Korea": {pop_2025: 26.1, pop_2030: 26.4},
+  "Taiwan": {pop_2025: 23.4, pop_2030: 22.9},
+  "Netherlands": {pop_2025: 17.6, pop_2030: 17.8},
+  "Romania": {pop_2025: 18.8, pop_2030: 18.2},
+  "Belgium": {pop_2025: 11.8, pop_2030: 12.0},
+  "Greece": {pop_2025: 10.4, pop_2030: 10.2},
+  "Czech Republic": {pop_2025: 10.8, pop_2030: 10.8},
+  "Portugal": {pop_2025: 10.3, pop_2030: 10.2},
+  "Sweden": {pop_2025: 10.6, pop_2030: 10.9},
+  "Hungary": {pop_2025: 9.6, pop_2030: 9.4},
+  "Austria": {pop_2025: 9.1, pop_2030: 9.2},
+  "Switzerland": {pop_2025: 8.9, pop_2030: 9.1},
+  "Israel": {pop_2025: 9.9, pop_2030: 10.7},
+  "Denmark": {pop_2025: 5.9, pop_2030: 6.0},
+  "Finland": {pop_2025: 5.6, pop_2030: 5.6},
+  "Norway": {pop_2025: 5.5, pop_2030: 5.7},
+  "Ireland": {pop_2025: 5.2, pop_2030: 5.4},
+  "New Zealand": {pop_2025: 5.2, pop_2030: 5.5},
+  "Singapore": {pop_2025: 6.0, pop_2030: 6.2}
+};
+
 // Combine both datasets
 const ALL_COUNTRIES = {...COUNTRY_RANK_DATA, ...ADDITIONAL_COUNTRIES};
+
+// =======================
+// Population Calculation Functions
+// =======================
+function getCurrentCountryPopulation(country) {
+  if (!POPULATION_PROJECTIONS[country]) {
+    // Fallback to static data if no projection available
+    return ALL_COUNTRIES[country] ? ALL_COUNTRIES[country].population * 1000000 : 0;
+  }
+
+  const currentDate = new Date();
+  const currentYear = currentDate.getFullYear();
+  const currentMonth = currentDate.getMonth() + 1; // 0-based to 1-based
+
+  // Calculate progress through the year
+  const yearProgress = (currentMonth - 1) / 12;
+
+  let basePopulation, targetPopulation, baseYear, targetYear;
+
+  if (currentYear <= 2025) {
+    // Before or at 2025: interpolate between current and 2025
+    baseYear = 2025;
+    targetYear = 2030;
+    basePopulation = POPULATION_PROJECTIONS[country].pop_2025;
+    targetPopulation = POPULATION_PROJECTIONS[country].pop_2030;
+
+    // If we're before 2025, use the 2025 projection
+    if (currentYear < 2025) {
+      return basePopulation * 1000000;
+    }
+  } else {
+    // After 2025: interpolate between 2025 and 2030
+    baseYear = 2025;
+    targetYear = 2030;
+    basePopulation = POPULATION_PROJECTIONS[country].pop_2025;
+    targetPopulation = POPULATION_PROJECTIONS[country].pop_2030;
+  }
+
+  // Linear interpolation between the two years
+  const totalYears = targetYear - baseYear;
+  const yearsSince = currentYear - baseYear + yearProgress;
+  const progress = Math.min(1, Math.max(0, yearsSince / totalYears));
+
+  const currentPopulation = basePopulation + (targetPopulation - basePopulation) * progress;
+
+  return Math.round(currentPopulation * 1000000); // Convert to actual population
+}
 
 // Extract country population data for compatibility
 const COUNTRY_POP = {};
 Object.keys(ALL_COUNTRIES).forEach(country => {
-  COUNTRY_POP[country] = ALL_COUNTRIES[country].population * 1000000; // Convert to actual population
+  COUNTRY_POP[country] = getCurrentCountryPopulation(country);
 });
 
 // =======================
@@ -1523,15 +1651,23 @@ function compute(){
   const totalCountries = Object.keys(ALL_COUNTRIES).length;
   if (ALL_COUNTRIES[country]) {
     const countryData = ALL_COUNTRIES[country];
-    // Calculate country-specific ranking
-    const countryPopulation = countryData.population * 1000000;
+    // Calculate country-specific ranking using current population projection
+    const countryPopulation = getCurrentCountryPopulation(country);
     const countryRank = Math.round(countryPopulation * (1 - P));
+
+    // Get population projection info
+    let populationDisplay = `${countryData.population}M`;
+    if (POPULATION_PROJECTIONS[country]) {
+      const currentPop = (countryPopulation / 1000000).toFixed(1);
+      const projectedPop2030 = POPULATION_PROJECTIONS[country].pop_2030;
+      populationDisplay = `${currentPop}M (${projectedPop2030}M by 2030)`;
+    }
 
     countryInfo = `
       <div style="margin:6px 0; padding:6px 8px; background:#0e141b; border-radius:6px; font-size:11px; border-left:3px solid var(--accent)">
         📊 <b>${country}</b> Country Rank: <b>#${countryData.rank}/${totalCountries}</b> ·
-        GDP per capita: <b>$${countryData.gdp_per_capita.toLocaleString()}</b> ·
-        Population: <b>${countryData.population}M</b> ·
+        GDP per capita: <b>$${countryData.gdp_per_capita.toLocaleString()}</b><br>
+        Population: <b id="countryPopulation">${populationDisplay}</b> ·
         Your rank in ${country}: <b id="countryRank">#${fmtInt(countryRank)}</b>
       </div>
     `;
@@ -1569,7 +1705,9 @@ function compute(){
     education, university, race, children, life_expectancy: lifeExpectancy, happiness,
     father_status: fatherStatus, father_age: fatherAge, mother_status: motherStatus, mother_age: motherAge,
     percentiles:{ country:pCountry, sex:pSex, age:pAge, wealth:pWealth, income:pIncome, health:pHealth, bmi:pBMI, education:pEdu, family:pFamily, lifeExp:pLifeExp, happiness:pHappiness },
-    weights: W, composite_percentile: P, world_total: WORLD_TOTAL, rank
+    weights: W, composite_percentile: P, world_total: WORLD_TOTAL, rank,
+    country_population: ALL_COUNTRIES[country] ? getCurrentCountryPopulation(country) : null,
+    country_projection_2030: POPULATION_PROJECTIONS[country] ? POPULATION_PROJECTIONS[country].pop_2030 : null
   };
 
   showNotification('Global ranking calculated successfully!', 'success');
