--- a/index.html
+++ b/index.html
@@ -330,6 +330,22 @@
       </div>
     </article>
 
+    <!-- Golf Handicap Ranking -->
+    <article class="card" id="golf">
+      <h2>Golf Handicap Ranking</h2>
+      <p>
+        Calculate your golf handicap and see your global ranking among golfers worldwide. Interactive dashboard with handicap distribution charts and driving distance statistics.
+      </p>
+      <ul>
+        <li>Personal handicap calculator</li>
+        <li>Global ranking by country &amp; gender</li>
+        <li>Driving distance statistics</li>
+      </ul>
+      <div class="cta">
+        <a class="btn" href="https://stberry7.github.io/golf_rank.html" aria-label="Open Golf Handicap Ranking Calculator">Open Golf Ranking</a>
+      </div>
+    </article>
+
 </section>
 
  <footer class="site">
